Fixed panel image wrapping

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -239,7 +239,7 @@ a.anchor {
     display: inline-block;
     width: 75%;
     color: #fbeee4;
-    margin: 20px 0px;
+    margin: 20px 20px;
     font-family: 'Work Sans';
     font-weight: 200;
     font-size: 16px;
